# kycortex-agents

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  CONTRIBUTOR_RIGHTS.md  MANIFEST.in  MIGRATION.md  Makefile  README.md  RELEASE.md  RELEASE_STATUS.md  campaign_summary.json  campaign_summary.md  campaign_summary_v44.json  campaign_summary_v44.md  campaign_summary_v45.json  campaign_summary_v45.md  campaign_summary_v46.json  campaign_summary_v46.md  campaign_summary_v47.json  campaign_summary_v47.md  campaign_summary_v48.json  campaign_summary_v48.md  campaign_summary_v49.json  campaign_summary_v49.md  campaign_summary_v50.json  campaign_summary_v50.md  campaign_summary_v51.json  campaign_summary_v51.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: ci.yml  release.yml
.local-docs/: context.md  evolution-log.md  history.md  plan.md
docs/: README.md  architecture.md  canary-operations.md  extensions.md  go-live-policy.md  persistence.md  plan.md  product-baseline.md  providers.md  release-checklist.md  troubleshooting.md  workflows.md
docs/canary-evidence/: README.md
docs/canary-evidence/03d6403/: canary-record.md  completion-review.md  environment-parity.md  incident-log.md  internal-runtime-telemetry.json  provider-health.json  rollback-log.md  workflow-summary.json
docs/canary-evidence/1af2d8d/: canary-record.md  completion-review.md  environment-parity.md  incident-log.md  internal-runtime-telemetry.json  provider-health.json  rollback-log.md  workflow-summary.json
docs/canary-evidence/1e68a8b/: canary-record.md  completion-review.md  environment-parity.md  incident-log.md  internal-runtime-telemetry.json  phase17-production-qualification.md  provider-health.json  rollback-log.md  workflow-summary.json
docs/canary-evidence/2563383/: canary-record.md  completion-review.md  environment-parity.md  incident-log.md  internal-runtime-telemetry.json  provider-health.json  rollback-log.md  workflow-summary.json
docs/canary-evidence/355b9fb/: canary-record.md  completion-review.md  environment-parity.md  incident-log.md  internal-runtime-telemetry.json  provider-health.json  rollback-log.md  workflow-summary.json
docs/canary-evidence/8bfdc29/: canary-record.md  completion-review.md  environment-parity.md  incident-log.md  internal-runtime-telemetry.json  provider-health.json  rollback-log.md  workflow-summary.json
docs/canary-evidence/c17c749/: canary-record.md  completion-review.md  environment-parity.md  incident-log.md  internal-runtime-telemetry.json  provider-health.json  rollback-log.md  workflow-summary.json
examples/: example_complex_workflow.py  example_custom_agent.py  example_failure_recovery.py  example_full_provider_workflow.py  example_multi_provider.py  example_provider_matrix_validation.py  example_provider_smoke.py  example_release_user_smoke.py  example_resume_workflow.py  example_simple_project.py  example_snapshot_inspection.py  example_test_mode.py
kycortex_agents/: __init__.py  config.py  exceptions.py  orchestrator.py  provider_matrix.py  types.py
kycortex_agents/agents/: __init__.py  architect.py  base_agent.py  code_engineer.py  code_reviewer.py  dependency_manager.py  docs_writer.py  legal_advisor.py  qa_tester.py  registry.py
kycortex_agents/memory/: __init__.py  project_state.py  state_store.py
kycortex_agents/orchestration/: __init__.py  agent_runtime.py  artifacts.py  ast_tools.py  context_building.py  contracts.py  dependency_analysis.py  model_adaptive_policy.py  module_ast_analysis.py  output_helpers.py  private_files.py  repair_analysis.py  repair_code_validation.py  repair_focus.py  repair_instructions.py  repair_signals.py  repair_test_analysis.py  repair_test_runtime.py  repair_test_structure.py  repair_test_validation.py  sandbox_execution.py  sandbox_runtime.py  sandbox_templates.py  task_constraints.py  test_ast_analysis.py  validation_analysis.py  validation_reporting.py  validation_runtime.py  workflow_acceptance.py  workflow_control.py
kycortex_agents/providers/: __init__.py  _error_classifier.py  anthropic_provider.py  base.py  factory.py  model_capabilities.py  ollama_provider.py  openai_provider.py
kycortex_agents/workflows/: __init__.py
scripts/: ollama_ab_timing.py  package_check.py  release_artifact_manifest.py  release_check.py  release_metadata_check.py  release_promotion_summary.py  release_published_assets_check.py  run_real_world_complex_matrix.py
tests/: conftest.py  test_agent_extensions.py  test_agent_input_contracts.py  test_agent_prompts.py  test_agent_protocol_compatibility.py  test_architect_functions.py  test_artifact_context_flow.py  test_base_agent.py  test_complex_workflow_artifact_flow.py  test_concrete_agents.py  test_config.py  test_config_policy_combinations.py  test_model_adaptive_policy.py  test_model_capabilities.py  test_orchestration_support.py  test_orchestrator.py  test_orchestrator_context.py  test_orchestrator_coverage.py  test_orchestrator_event_audit.py  test_orchestrator_retry_logging.py  test_output_validation_recovery.py  test_package_metadata.py  test_persistence_resume.py  test_project_state.py  test_provider_agent_integration.py  test_provider_matrix.py  test_provider_metadata_accumulation.py  test_providers.py  test_public_api.py  test_public_smoke.py  test_qa_tester.py  test_qa_tester_statics.py  test_real_world_complex_matrix.py  test_registry.py  test_repair_analysis_helpers.py  test_repair_signals.py  test_snapshot_roundtrip.py  test_state_store.py  test_timing_accuracy.py
(+78 files in other folders)
