[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kycortex-agents"
version = "0.1.0"
description = "Multi-agent orchestration framework for AI software house"
authors = [{name = "Alexandre Andrade", email = "alexandre@kycortex.com"}]
readme = "README.md"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["agents", "llm", "orchestration", "multi-agent", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "anthropic>=0.34.0,<1.0.0",
    "openai>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
test = [
    "build>=1.2,<2.0",
    "pytest>=7.0.0",
    "mypy>=1.10,<2.0",
    "pre-commit>=3.7,<5.0",
    "ruff>=0.6,<1.0",
]

[project.urls]
Homepage = "https://github.com/alexandrade1978/kycortex-agents"
"Source Code" = "https://github.com/alexandrade1978/kycortex-agents"
Documentation = "https://github.com/alexandrade1978/kycortex-agents/blob/main/docs/README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py310"

[tool.mypy]
python_version = "3.10"
files = ["kycortex_agents", "examples"]

[[tool.mypy.overrides]]
module = ["anthropic"]
ignore_missing_imports = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["kycortex_agents", "kycortex_agents.*"]

[tool.setuptools.package-data]
kycortex_agents = ["py.typed"]
